2004-11-04  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/uniteditor.c: undeprecated by using a
	GtkUIManager for creating the toolbar. Some cleanup and code
	reordering.

2004-11-04  Michael Natterer  <mitch@gimp.org>

	* configure.in: disable the whole bunch of FOO_DISABLE_DEPRECATED
	only for future versions of GLib, GTK+ and Pango because the
	upcoming new stable versions add no new deprecations that are
	relevant for the GIMP source.

2004-11-04  Michael Natterer  <mitch@gimp.org>

	* plug-ins/ifscompose/ifscompose.c: some undeprecation and
	cleanup. Still uses GtkItemFactory.

2004-11-04  Michael Natterer  <mitch@gimp.org>

	Don't use deprecated GtkToolbar API in GimpTextEditor:

	* app/actions/Makefile.am
	* app/actions/actions.c
	* app/actions/text-editor-actions.[ch]
	* app/actions/text-editor-commands.[ch]: added acions and
	callbacks for the new "text-editor" action group.

	* app/menus/menus.c: register a "<TextEditor>" UI manager.

	* menus/Makefile.am
	* menus/text-editor-toolbar.xml: new file for the toolbar.

	* app/widgets/gimptexteditor.[ch]: use the toolbar created by the
	UI manager instead of constructing it using deprecated API.

	* app/tools/gimptextoptions.c: changed accordingly.

	* app/widgets/gimpwidgets-utils.[ch]: added gimp_text_buffer_load()
	(used by text-editor-commands.c).

2004-11-04  Michael Natterer  <mitch@gimp.org>

	* plug-ins/ifscompose/ifscompose.c: #undef GTK_DISABLE_DEPRECATED.

2004-11-04  Michael Natterer  <mitch@gimp.org>

	* libgimpwidgets/gimpcolorbutton.[ch]: use a GtkUIManager instead
	of a GtkItemFactory. Added virtual function ::get_action_type()
	and create the manager's actions manually using that action type
	instead of using gtk_action_group_add_actions().

	* app/widgets/gimpcolorpanel.c: override ::get_action_type() so it
	creates GimpActions (which can have a color attached) instead of
	GtkActions. Changed the menu item visibility and color preview
	code accordingly.

	* app/widgets/Makefile.am