@@ -1,3 +1,8 @@
+2004-11-04  Sven Neumann  <sven@gimp.org>
+
+	* app/dialogs/user-install-dialog.c (user_install_response): don't
+	save the (empty) gimprc after migrating the user settings.
+
 2004-11-04  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/common/uniteditor.c: undeprecated by using a
